--- a/css/style.css
+++ b/css/style.css
@@ -42,11 +42,11 @@ h2 {
     align-items: center;
 }
 
+/* parallax header */
 .parallax {
     background-image: url("/images/hamster-cover-narrow.jpg");
     background-size: cover;
     background-attachment: fixed;
-    /* height: 50vh; */
     min-height: 450px;
     width: 100%;
 }
@@ -70,9 +70,10 @@ a {
     justify-content: space-around;
     margin-top: 40px;
 }
+
+/* general icon definitions */
 .header-text i,
-.projects-container i,
-.footer i {
+.projects-container i {
     margin: 20px;
 }
 
@@ -91,6 +92,8 @@ a {
     max-width: 700px;
 }
 
+
+/* projects section */
 .projects {
     padding: 30px;
     background: var(--bg-blue);
@@ -136,6 +139,7 @@ a {
     height: 15vw;
 }
 
+/* contact section */
 .contact-area {
     display: flex;
     justify-content: center;
@@ -183,10 +187,6 @@ a {
     background-color: salmon;
 }
 
-.cv i {
-    padding: 0;
-    margin-right: 0;
-}
 
 .footer {
     background: var(--bg-gray);
@@ -196,6 +196,10 @@ a {
     min-height: 100px;
     padding: 30px;
     color: white;
+}
+
+.footer .item {
+  margin:20px;
 }
 
 .footer a:hover,
